<resources>
    <string name="app_name">ToDoList</string>
    <string name="label_create_task">Criar tarefa</string>
    <string name="label_date">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_description">Descrição</string>
    <string name="label_title">Título</string>
    <string name="label_tasks">Tarefas</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Deletar</string>
    <string name="message_no_tasks">Ops! Você nāo possui \nnenhuma tarefa!</string>
</resources>